--- a/TaskMaster/Components/_Imports.razor
+++ b/TaskMaster/Components/_Imports.razor
@@ -9,3 +9,5 @@
 @using Microsoft.JSInterop
 @using TaskMaster
 @using TaskMaster.Components
+@using TaskMaster.Services
+@using TaskMaster.Data.Dtos
